Fixed language menu z-index issues 2sic/2sxc#538 and fixed some issues with translating in IE11 2sic/2sxc#663

--- a/src/edit/localization/localization-menu.css
+++ b/src/edit/localization/localization-menu.css
@@ -1,5 +1,6 @@
-﻿.eav-localization { }
+﻿.formly-field { position:relative; }
+.eav-localization { position:absolute; top:0; right:0; }
 .eav-localization-lock { float: right; display: inline-block; }
 .eav-localization-lock-open { color: #228b22; }
-.eav-localization-dropdown { margin-top: 20px; display:none!important; }
+.eav-localization-dropdown { margin-top: 0px; display:none!important;  }
 .eav-localization:hover .eav-localization-dropdown { display: block!important; }
